--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://giacomosorbi.github.io/ekladova-module-ii/",
+  "homepage": "https://giacomosorbi.github.io/ekladova-module-ii/",
   "name": "vd-sub",
   "version": "0.1.0",
   "private": true,
